objects/Opportunity_Brokerage__c.object
<CustomObject>
    <description>Junction object between Account and Opportunity, enabling the many to many relationship between Accounts and opportunities.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Associated brokerage accounts.</description>
        <inlineHelpText>Associated brokerage accounts.</inlineHelpText>
        <label>Brokerage Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an account of type brokerage.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Brokerage</value>
            </filterItems>
            <infoMessage>Please select an account of type brokerage.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Brokerages</relationshipLabel>
        <relationshipName>Opportunity_Brokerages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Broker</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Brokerages</relationshipLabel>
        <relationshipName>Opportunity_Brokerages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Brokerage__c</fullName>
        <displayFormat>OB-{00000}</displayFormat>
        <label>Opportunity Brokerage Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>related opportunity</description>
        <inlineHelpText>related opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Brokerages</relationshipLabel>
        <relationshipName>Opportunity_Brokerages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Brokerage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Brokerage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Brokerages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>